--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -15,8 +15,8 @@
 <body> 
 <f:metadata>
     <f:viewParam name="id" value="#{observacion.id}" />
-    <f:viewParam name="comment" value="#{observacion.comentarios}" />
-    <f:viewParam name="comment2" value="#{observacion.comentarios}" />
+    <f:viewParam name="comment1" value="#{observacion.aprobados}" />
+    <f:viewParam name="comment2" value="#{observacion.rechazados}" />
     
     <f:event type="preRenderView" listener="#{observacion.preRenderViewListener()}"/>
 </f:metadata>
@@ -57,11 +57,11 @@
 		<p:commandButton value="Aprobar" class="btn btn-success" onclick="PF('dlg1').show();"  style="float:left;margin-left:25px" disabled="#{observacion.VerificarTipo(login.username)}">
 		</p:commandButton>
 		<p:dialog header="Aprobar observacion" widgetVar="dlg1" minHeight="40">
-            <h:outputLabel for="comment" value="Comentario:" />
-            <h:inputText  id="inputComentario" class="form-control" label="*Comentario*" required="false" maxlength="80" disabled="false" style="margin-bottom:25px" value="#{observacion.comentarios}">
-		 	        	<f:param name="comment" value="${observacion.comentarios}" />
+            <h:outputLabel for="comment1" value="Comentario:" />
+            <h:inputText  id="inputComentario" class="form-control" label="*Comentario*" required="false" maxlength="80" disabled="false" style="margin-bottom:25px" value="#{observacion.aprobados}">
+		 	        	<f:param name="comment1" value="${observacion.aprobados}" />
 		 	 </h:inputText>
-        <p:commandButton value="Si" update="message" action="#{observacion.aprobarObservacion(observacion.observacionSeleccionada)}"  styleClass="ui-confirmdialog-yes" icon="pi pi-check" oncomplete="PF('dlg2').hide();" >
+        <p:commandButton value="Si" update="message" action="#{observacion.aprobarObservacion(observacion.observacionSeleccionada)}"  styleClass="ui-confirmdialog-yes" icon="pi pi-check" oncomplete="PF('dlg1').hide();" >
         <f:param name="id" value="${observacion.id}" />
         </p:commandButton>
         <p:commandButton value="No" styleClass="ui-confirmdialog-no" style="margin-left:80px" icon="pi pi-times" oncomplete="PF('dlg1').hide();"/>
@@ -74,10 +74,10 @@
 		</p:commandButton>
 		<p:dialog header="Rechazar observacion" widgetVar="dlg2" minHeight="40">
             <h:outputLabel for="comment2" value="Comentario:" />
-            <h:inputText  id="inputComentario2" class="form-control" label="*Comentario2*" required="false" maxlength="80" disabled="false" style="margin-bottom:25px" value="#{observacion.comentarios}">
-	            		<f:param name="comment2" value="${observacion.comentarios}" />
+            <h:inputText  id="inputComentario2" class="form-control" label="*Comentario2*" required="false" maxlength="80" disabled="false" style="margin-bottom:25px" value="#{observacion.rechazados}">
+	            		<f:param name="comment2" value="${observacion.rechazados}" />
 		 	 </h:inputText>
-        <p:commandButton value="Si" update="message" action="#{observacion.rechazarObservacion(observacion.observacionSeleccionada)}"  styleClass="ui-confirmdialog-yes" icon="pi pi-check" oncomplete="PF('dlg2').hide();" >
+        <p:commandButton value="Si" update="message" action="#{observacion.rechazarObservacion(observacion.observacionSeleccionada)}"  styleClass="ui-confirmdialog-yes" icon="pi pi-check" oncomplete="PF('dlg1').hide();" >
         <f:param name="id" value="${observacion.id}" />
         </p:commandButton>
         <p:commandButton value="No"  styleClass="ui-confirmdialog-no" style="margin-left:80px" icon="pi pi-times" oncomplete="PF('dlg2').hide();"/>
