Se modifica el codificar imagen

--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
@@ -68,7 +68,8 @@
       </p:inputNumber>
 	  </li>
   		<li class="list-group-item">Imagen: 
-	 <h:graphicImage value="data:image/jpg;base64,#{observacion.codificar()}" style="max-width: 200px; max-height: 200px;" />
+	 <h:graphicImage value="#{observacion.codificar()}" style="max-width: 200px; max-height: 200px;" />
+	  	  #{observacion.ImagenTxt()}
 	  </li>	
 	</ul>	
 	
