--- a/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
@@ -34,7 +34,8 @@
 	  <li class="list-group-item"><strong>Longitud:</strong> #{observacion.observacionSeleccionada.longitud}°</li>
 	  <li class="list-group-item"><strong>Altitud:</strong> #{observacion.observacionSeleccionada.altitud} mts</li>
 	  <li class="list-group-item"><strong>Imagen:</strong> 
-	 <h:graphicImage value="data:image/jpg;base64,#{observacion.codificar()}" style="max-width: 200px; max-height: 200px;" />
+	 <h:graphicImage value="#{observacion.codificar()}" style="max-width: 200px; max-height: 200px;" />
+	   #{observacion.ImagenTxt()}
 	  </li>
 	</ul><br/><br/>
 	<div class="container">
