--- a/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
@@ -39,9 +39,9 @@
 	  </li>
 	</ul><br/><br/>
 	<div class="container">
-      <div class="vertical-center">
-		<h:link value="Volver" outcome="GestionReportes.xhtml" class="btn btn-success" style="float:left;margin-left:350px" />
-	  </div>
+	  <div style="display:block; text-align:center; margin-top: 50px" >	
+	<h:link value="Volver" outcome="GestionReportes.xhtml" class="btn btn-success" /><br/><br/>
+	</div>
 	  
 </div><br/><br/>
 			<h:messages style="color:red;margin:8px;" /><br/><br/>
