fix valdiacion documento

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -38,7 +38,7 @@
 		   		  
 		   		   <h:outputLabel for="inputUsuario" >Usuario:</h:outputLabel>
 		  		   <h:inputText  id="inputusuario" class="form-control" label="*Usuario*" required="true" a:placeholder="Ingrese un usuario..."  
-		  		   maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.usuario}">
+		  		   maxlength="80" disabled="true" value="#{usuario.usuarioSeleccionado.usuario}">
 		  		   	 </h:inputText>
 
 		  		        </div>
