fix dialog dar de baja

--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -106,8 +106,8 @@
 	<p:dataTable  value="#{observacion.observacionesFiltradas}"
 		var="obserTabla"
 		   style="margin-bottom:40px"
-		   class="table table-hover table-dark"
 		   rows="10"
+		   		 rowStyleClass="table-info"
                  paginator="true"
                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                  currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
