--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
@@ -64,8 +64,8 @@
 	<p:dataTable value="#{observacion.observacionesPendientes}"
 		var="obseTabla"
 		   style="margin-bottom:40px"
-		   tableStyleClass="table table-hover table-dark"
 		   rows="10"
+		   		 rowStyleClass="table-info"
                  paginator="true"
                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                  currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
@@ -98,7 +98,7 @@
 		<p:column>
 			<f:facet name="header">Ver Detalle</f:facet>
 			<h:link value="Ver detalle" outcome="DetalleObservacion.xhtml" class="badge badge-success">
-    			<f:param name="id" value="${observacion.id}" />
+    			<f:param name="id" value="${obseTabla.id}" />
 			</h:link>
 		</p:column>		
 	</p:dataTable>
