--- a/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"> 
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"> 
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
@@ -34,11 +35,26 @@
 			
 		<div style="display:block; text-align:center; margin-top: 40px">		
 		<h:commandButton  id="idVolver" value="Volver"	action="GestionUsuarios.xhtml" class="btn btn-success" /> 
-		<h:commandButton id="idBaja"  value="Dar de baja" style="margin-left: 40px" action="#{usuario.darDeBajaUsuario(usuario.usuarioSeleccionado, login.username)}" class="btn btn-success">
-    			<f:param name="id" value="${usuario.id}" />
-    	</h:commandButton>
+		
+		
+		
+			 <div class="vertical-center">
+		<p:commandButton value="Eliminar Usuario" class="btn btn-danger" onclick="PF('dlg1').show();"  style="margin-left:40px">
+		</p:commandButton>
+		<p:dialog header="Eliminar Usuario" widgetVar="dlg1" minHeight="40">
+        <h:outputLabel style="float:center;margin-top:10px" for="comment" value="Confirma la eliminacion?"/>
+        <p:commandButton value="Si"  action="#{usuario.darDeBajaUsuario(usuario.usuarioSeleccionado, login.username)}" update="message" styleClass="ui-confirmdialog-yes" icon="pi pi-check" oncomplete="PF('dlg1').hide();" >
+        <f:param name="id" value="${usuario.id}" />
+        </p:commandButton>
+        <p:commandButton value="No" styleClass="ui-confirmdialog-no" style="margin-left:80px" icon="pi pi-times" oncomplete="PF('dlg1').hide();"/>
+    	</p:dialog>	 
+    </div>
+		
+		
+		
 		</div>
 		<h:messages   style="color:red;margin:8px;text-align:center;" />
+		<p:growl id="message" showDetail="true" />		
 		
 	</h:form>
 	<div id="footer" style="bottom:0px" >
