--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -87,8 +87,8 @@
 	<p:dataTable  value="#{usuario.usuariosSeleccionados}"
 		var="usuTabla"
 		   style="margin-bottom:40px"
-		   tableStyleClass="table table-hover table-dark"
 		   rows="10"
+		   		rowStyleClass="table-info"
                  paginator="true"
                  paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                  currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
