--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -27,13 +27,13 @@
 	<ul class="list-group" style="text-align:center" >
 	  <li class="list-group-item active bg-success fixed-top"   style="border-bottom: 4px solid #FF8F00;">Detalles de Observacion</li>
 	  <li class="list-group-item"><strong>Id:</strong>  #{observacion.observacionSeleccionada.id}</li>
-	  <li class="list-group-item"><strong>Codigo:</strong>  #{observacion.observacionSeleccionada.codigo_OBS}</li>
+	  <li class="list-group-item"><strong>Código:</strong>  #{observacion.observacionSeleccionada.codigo_OBS}</li>
 	  <li class="list-group-item"><strong>Usuario:</strong>  #{observacion.observacionSeleccionada.usuario.usuario}</li>
 	  <li class="list-group-item"><strong>Fecha:</strong>  #{observacion.NuevaFecha(observacion.observacionSeleccionada.fecha)}</li>
-	  <li class="list-group-item"><strong>Fenomeno:</strong>  #{observacion.observacionSeleccionada.fenomeno.nombreFen}</li>
+	  <li class="list-group-item"><strong>Fenómeno:</strong>  #{observacion.observacionSeleccionada.fenomeno.nombreFen}</li>
 	  <li class="list-group-item"><strong>Estado:</strong>  #{observacion.observacionSeleccionada.estado.nombre}</li>
 	  <li class="list-group-item"><strong>Localidad:</strong>  #{observacion.observacionSeleccionada.localidad.nombreLoc}</li>
-	  <li class="list-group-item"><strong>Descripcion:</strong> #{observacion.observacionSeleccionada.descripcion}</li>
+	  <li class="list-group-item"><strong>Descripción:</strong> #{observacion.observacionSeleccionada.descripcion}</li>
 	  <li class="list-group-item"><strong>Latitud:</strong>  #{observacion.observacionSeleccionada.latitud}°</li>
 	  <li class="list-group-item"><strong>Longitud:</strong> #{observacion.observacionSeleccionada.longitud}°</li>
 	  <li class="list-group-item"><strong>Altitud:</strong> #{observacion.observacionSeleccionada.altitud} mts</li>
@@ -93,9 +93,9 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
-						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
-						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestión de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
