--- a/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
@@ -27,8 +27,8 @@
 	  <li class="list-group-item"><strong>Apellido:</strong> #{usuario.usuarioSeleccionado.apellido}</li>
 	  <li class="list-group-item"><strong>Estado:</strong> ACTIVO</li>
 	  <li class="list-group-item"><strong>Tipo de Documento:</strong> #{usuario.usuarioSeleccionado.tipodoc}</li>
-	  <li class="list-group-item"><strong>Numero de Documento:</strong> #{usuario.usuarioSeleccionado.numerodoc}</li>
-	  <li class="list-group-item"><strong>Direccion:</strong> #{usuario.usuarioSeleccionado.direccion}</li>
+	  <li class="list-group-item"><strong>Número de Documento:</strong> #{usuario.usuarioSeleccionado.numerodoc}</li>
+	  <li class="list-group-item"><strong>Dirección:</strong> #{usuario.usuarioSeleccionado.direccion}</li>
 	  <li class="list-group-item"><strong>Mail:</strong> #{usuario.usuarioSeleccionado.mail}</li>
 	  <li class="list-group-item"><strong>Tipo de Usuario:</strong> #{usuario.usuarioSeleccionado.tipousuario.nombre}</li>
 	  
