--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -23,15 +23,15 @@
       <div class="collapse navbar-collapse" id="navbarResponsive" >
         <ul class="navbar-nav ml-auto" >
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios     </a>
+            <a class="nav-link" href="../GestionUsuarios/GestionUsuarios.xhtml">Gestión de Usuarios     </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones
+            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones
             <span class="badge badge-light"> #{observacion.totalPen}</span>
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a>
+            <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a>
           </li>
           <li>
             <div class="badge badge-light" style="float:left;margin-top:12px">
@@ -55,7 +55,7 @@
 					<div class="container">
 						<div class="row">
 				            <div class="col-xs-7"><br/>
-				                <h1 style="color:#adad85;">Filtros de Busqueda:</h1>
+				                <h1 style="color:#adad85;">Filtros de Búsqueda:</h1>
 				            </div>	
 				        </div>
 						<hr></hr>	
@@ -146,9 +146,9 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
-						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
-						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestión de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
