--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -40,16 +40,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="GestionUsuarios.xhtml">Gestion de Usuarios
+            <a class="nav-link" href="GestionUsuarios.xhtml">Gestión de Usuarios
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones
+            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones
             <span class="badge badge-light"> #{observacion.totalPen}</span>
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a>
+            <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a>
           </li>
           <li>
             <div class="badge badge-light" style="float:left;margin-top:12px">
@@ -81,8 +81,8 @@
     <div class="carousel-item active">
       <img class="fill" src="../resources/img/Forestacion.jpg" style="width:100vw;" />
       <div class="carousel-caption">
-	         <h2>Forestación</h2>
-	         <p>Ayuda con la Deforestacion</p>
+	         <h2>Deforestación</h2>
+	         <p>Ayuda con la Deforestación</p>
 	   </div>
 	 </div>  
     <div class="carousel-item" >
@@ -142,7 +142,7 @@
 	                        <h4><i class="fas fa-bullhorn"></i> Reporte de Observaciones</h4>
 	                    </div>
 	                    <div class="panel-body">
-	                        <p>Registre observaciones y ayude a detectar importantes acontecimientos. Estas observaciones seran registradas por expertos en el tema para poder darle un respaldo cientifico.</p>
+	                        <p>Registre observaciones y ayude a detectar importantes acontecimientos. Estas observaciones serán registradas por expertos en el tema para poder darle un respaldo científico.</p>
 	                        
 	                    </div>
 	                </div>
@@ -153,7 +153,7 @@
 	                        <h4><i class="far fa-file-alt"></i> Reportes</h4>
 	                    </div>
 	                    <div class="panel-body">
-	                        <p>Realice la busqueda de observaciones, para ver que registraron los usuarios por rango de fecha y zona.</p>
+	                        <p>Realice la búsqueda de observaciones, para ver que registraron los usuarios por rango de fecha y zona.</p>
 	                        
 	                    </div>
 	                </div>
@@ -174,9 +174,9 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
-						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
-						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+						<li><a href="GestionUsuarios.xhtml">Gestión de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
