--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -88,7 +88,7 @@
 	  		    
 	  		 </div>
 	         <div class="col-md-3 mb-3">
-	   		 	 <label for="inputDireccion">Direccion:</label>
+	   		 	 <label for="inputDireccion">Dirección:</label>
 				  	<h:inputText label="*Dirección Requerido*" id="inputDireccion" class="form-control" required="true" a:placeholder="Ingrese la direccion del usuario..." maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.direccion}" />
 				
 	  	     </div>
