Nivele tecnologias en pantalla DetalleObservacion.

--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -44,7 +44,7 @@
 	</ul><br/><br/>
 	<div class="container">
       <div class="vertical-center">
-		<h:link value="Volver" outcome="ListadoObservaciones.xhtml" class="btn btn-primary" style="float:left;margin-left:350px" />
+		<p:commandButton value="Volver" class="btn btn-primary" onclick="window.history.back();"  style="float:left;margin-left:380px" />
 	  </div>
 	  
 	 <div class="vertical-center">
