--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ListadoObservaciones.xhtml
@@ -4,7 +4,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+      xmlns:o="http://primefaces.org/ui">
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
@@ -12,7 +13,6 @@
 <link rel="stylesheet" href="../resources/css/style.css"/>
 </h:head>
 <body>
-	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
     <div class="container">
       <a class="navbar-brand" href="../GestionUsuarios/Index.xhtml">Green Place</a>
