Fix campos vacíos, reactivar usuario y username existente.

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/sobrenosotros.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/sobrenosotros.xhtml
@@ -33,16 +33,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="GestionUsuarios.xhtml">Gestion de Usuarios
+            <a class="nav-link" href="GestionUsuarios.xhtml">Gestión de Usuarios
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones
+            <a class="nav-link" href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones
             <span class="badge badge-light"> #{observacion.totalPen}</span>
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a>
+            <a class="nav-link" href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a>
           </li>
           <li>
             <div class="badge badge-primary">
@@ -154,9 +154,9 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
-						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
-						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+						<li><a href="GestionUsuarios.xhtml">Gestión de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
