fix tildes y mayuscula en usuario

--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -34,7 +34,7 @@
           </li>
             <li>
             <div class="badge badge-light" style="float:left;margin-top:12px">
-             #{login.username} 
+             #{login.username.toUpperCase()} 
              </div>
           </li>
           <li>
