--- a/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
@@ -69,9 +69,9 @@
 				</div><!-- /.col -->
 				<div class="col-md-3">
 					<ul>
-						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestion de Usuarios</a></li>
-						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestion de Observaciones</a></li>
-						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestion de Reportes</a></li>
+						<li><a href="../GestionUsuarios/GestionUsuarios.xhtml">Gestión de Usuarios</a></li>
+						<li><a href="../GestionObservaciones/ListadoObservaciones.xhtml">Gestión de Observaciones</a></li>
+						<li><a href="../GestionReportes/GestionReportes.xhtml">Gestión de Reportes</a></li>
 					</ul>
 				</div><!-- /.col -->
 				<div class="col-md-3">
