--- a/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"
       xmlns:o="http://java.sun.com/jsf/html"
-      xmlns:p="http://java.sun.com/jsf/html"> 
+      xmlns:k="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui"> 
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
@@ -38,12 +39,14 @@
 	   #{observacion.ImagenTxt()}
 	  </li>
 	</ul><br/><br/>
-	<div class="container">
-	  <div style="display:block; text-align:center; margin-top: 50px" >	
-	<h:link value="Volver" outcome="GestionReportes.xhtml" class="btn btn-success" /><br/><br/>
-	</div>
+	
 	  
-</div><br/><br/>
+		  <div style="display:block; text-align:center; margin-top: 50px">
+		<p:commandButton value="Volver" class="btn btn-success" onclick="window.history.back();"  />
+	 	 </div>
+	  
+	  
+
 			<h:messages style="color:red;margin:8px;" /><br/><br/>
 	
 			
