--- a/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
@@ -4,7 +4,9 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"> 
+      xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"
+      xmlns:p="http://primefaces.org/ui"
+      > 
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
@@ -35,7 +37,7 @@
 	</ul>
 	
 	<div style="display:block; text-align:center; margin-top: 50px" >	
-	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-success" /><br/><br/>
+		<p:commandButton value="Volver" class="btn btn-success" onclick="window.history.back();" /><br/><br/>
 	</div>
 		<h:messages   style="color:red;margin:8px;" />
 		
