cambio color botón volver

--- a/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/DetalleReporte.xhtml
@@ -42,7 +42,7 @@
 	
 	  
 		  <div style="display:block; text-align:center; margin-top: 50px">
-		<p:commandButton value="Volver" class="btn btn-success" onclick="window.history.back();"  />
+		<p:commandButton value="Volver" class="btn btn-primary" onclick="window.history.back();"  />
 	 	 </div>
 	  
 	  
