--- a/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
@@ -95,7 +95,7 @@
 	
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >
-	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-success" style="float:left;margin-left:15px"/> 
+	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-primary" style="float:left;margin-left:15px"/> 
 	<h:commandButton  id="crear" value="Dar de Alta" style="float:left;margin-left:15px" action="#{usuario.crearUsuario()}"  class="btn btn-success"/><br />
 	  
 	<h:outputText  />
