--- a/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
@@ -37,7 +37,7 @@
 	</ul>
 	
 	<div style="display:block; text-align:center; margin-top: 50px" >	
-		<p:commandButton value="Volver" class="btn btn-success" onclick="window.history.back();" /><br/><br/>
+		<p:commandButton value="Volver" class="btn btn-primary" onclick="window.history.back();" /><br/><br/>
 	</div>
 		<h:messages   style="color:red;margin:8px;" />
 		
