--- a/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/BajaUsuario.xhtml
@@ -34,7 +34,7 @@
 	</ul>
 			
 		<div style="display:block; text-align:center; margin-top: 40px">		
-		<p:commandButton value="Volver" class="btn btn-success" onclick="window.history.back();" /> 
+		<p:commandButton value="Volver" class="btn btn-primary" onclick="window.history.back();" /> 
 		<p:commandButton value="Eliminar Usuario" class="btn btn-danger" onclick="PF('dlg1').show();"  style="margin-left:40px">
 		</p:commandButton>
 		</div>
