--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -104,7 +104,7 @@
 	</ul>
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >
-	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-success" style="float:left;margin-left:15px"/> 
+	<h:link value="Volver" outcome="GestionUsuarios.xhtml" class="btn btn-primary" style="float:left;margin-left:15px"/> 
 	<h:commandButton id="idModificar"  value="Modificar" style="float:left;margin-left:15px" action="#{usuario.actualizarUsuario(usuario.usuarioSeleccionado)}" class="btn btn-success"><br/>
 	<f:param name="id" value="${usuario.id}" />
     	</h:commandButton>
